tests/ui/self/elision/multiple-ref-self-async.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/multiple-ref-self-async.rs:22:74
   |
LL |     async fn wrap_ref_Self_ref_Self(self: Wrap<&Self, &Self>, f: &u8) -> &u8 {
   |                                           ------------------     ---     ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from one of `self`'s 2 lifetimes or `f`
help: consider introducing a named lifetime parameter
   |
LL |     async fn wrap_ref_Self_ref_Self<'a>(self: Wrap<&'a Self, &'a Self>, f: &'a u8) -> &'a u8 {
   |                                    ++++             ++        ++            ++         ++

error[E0106]: missing lifetime specifier
  --> $DIR/multiple-ref-self-async.rs:28:84
   |
LL |     async fn box_wrap_ref_Self_ref_Self(self: Box<Wrap<&Self, &Self>>, f: &u32) -> &u32 {
   |                                               -----------------------     ----     ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from one of `self`'s 2 lifetimes or `f`
help: consider introducing a named lifetime parameter
   |
LL |     async fn box_wrap_ref_Self_ref_Self<'a>(self: Box<Wrap<&'a Self, &'a Self>>, f: &'a u32) -> &'a u32 {
   |                                        ++++                 ++        ++             ++          ++

error[E0106]: missing lifetime specifier
  --> $DIR/multiple-ref-self-async.rs:34:84
   |
LL |     async fn pin_wrap_ref_Self_ref_Self(self: Pin<Wrap<&Self, &Self>>, f: &u32) -> &u32 {
   |                                               -----------------------     ----     ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from one of `self`'s 2 lifetimes or `f`
help: consider introducing a named lifetime parameter
   |
LL |     async fn pin_wrap_ref_Self_ref_Self<'a>(self: Pin<Wrap<&'a Self, &'a Self>>, f: &'a u32) -> &'a u32 {
   |                                        ++++                 ++        ++             ++          ++

error[E0106]: missing lifetime specifier
  --> $DIR/multiple-ref-self-async.rs:40:93
   |
LL |     async fn box_box_wrap_ref_Self_ref_Self(self: Box<Box<Wrap<&Self, &Self>>>, f: &u32) -> &u32 {
   |                                                   ----------------------------     ----     ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from one of `self`'s 2 lifetimes or `f`
help: consider introducing a named lifetime parameter
   |
LL |     async fn box_box_wrap_ref_Self_ref_Self<'a>(self: Box<Box<Wrap<&'a Self, &'a Self>>>, f: &'a u32) -> &'a u32 {
   |                                            ++++                     ++        ++              ++          ++

error[E0106]: missing lifetime specifier
  --> $DIR/multiple-ref-self-async.rs:46:93
   |
LL |     async fn box_pin_wrap_ref_Self_ref_Self(self: Box<Pin<Wrap<&Self, &Self>>>, f: &u32) -> &u32 {
   |                                                   ----------------------------     ----     ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from one of `self`'s 2 lifetimes or `f`
help: consider introducing a named lifetime parameter
   |
LL |     async fn box_pin_wrap_ref_Self_ref_Self<'a>(self: Box<Pin<Wrap<&'a Self, &'a Self>>>, f: &'a u32) -> &'a u32 {
   |                                            ++++                     ++        ++              ++          ++

error: lifetime may not live long enough
  --> $DIR/multiple-ref-self-async.rs:24:9
   |
LL |     async fn wrap_ref_Self_ref_Self(self: Wrap<&Self, &Self>, f: &u8) -> &u8 {
   |                                                                  - let's call the lifetime of this reference `'1`
LL |
LL |         f
   |         ^ returning this value requires that `'1` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/multiple-ref-self-async.rs:30:9
   |
LL |     async fn box_wrap_ref_Self_ref_Self(self: Box<Wrap<&Self, &Self>>, f: &u32) -> &u32 {
   |                                                                           - let's call the lifetime of this reference `'1`
LL |
LL |         f
   |         ^ returning this value requires that `'1` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/multiple-ref-self-async.rs:36:9
   |
LL |     async fn pin_wrap_ref_Self_ref_Self(self: Pin<Wrap<&Self, &Self>>, f: &u32) -> &u32 {
   |                                                                           - let's call the lifetime of this reference `'1`
LL |
LL |         f
   |         ^ returning this value requires that `'1` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/multiple-ref-self-async.rs:42:9
   |
LL |     async fn box_box_wrap_ref_Self_ref_Self(self: Box<Box<Wrap<&Self, &Self>>>, f: &u32) -> &u32 {
   |                                                                                    - let's call the lifetime of this reference `'1`
LL |
LL |         f
   |         ^ returning this value requires that `'1` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/multiple-ref-self-async.rs:48:9
   |
LL |     async fn box_pin_wrap_ref_Self_ref_Self(self: Box<Pin<Wrap<&Self, &Self>>>, f: &u32) -> &u32 {
   |                                                                                    - let's call the lifetime of this reference `'1`
LL |
LL |         f
   |         ^ returning this value requires that `'1` must outlive `'static`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0106`.
